# scythe

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.py  manifest.json  pyproject.toml
.github/workflows/: build-mcpb.yml
reaper_mcp/: __init__.py  __main__.py  helpers.py  server.py
reaper_mcp/tools/: actions.py  devices.py  envelopes.py  ext_state.py  items.py  markers.py  midi.py  project.py  render.py  sends.py  take_fx.py  tempo.py  time_selection.py  track_fx.py  tracks.py
scythe/: __main__.py  helpers.py  server.py
scythe/tools/: envelopes.py  markers.py  midi.py  scripting.py  time_selection.py  track_fx.py
tests/: test_smoke.py
